; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/ext/extr_egl_khr_sync_client.c_egl_sync_destroy_iterator.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/ext/extr_egl_khr_sync_client.c_egl_sync_destroy_iterator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64, i8*, i8*)* @egl_sync_destroy_iterator to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @egl_sync_destroy_iterator(i8* %0, i64 %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load i64, i64* %6, align 8
  %11 = inttoptr i64 %10 to i32*
  store i32* %11, i32** %9, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @UNUSED(i8* %12)
  %14 = load i8*, i8** %7, align 8
  %15 = call i32 @UNUSED(i8* %14)
  %16 = load i8*, i8** %8, align 8
  %17 = call i32 @UNUSED(i8* %16)
  %18 = load i32*, i32** %9, align 8
  %19 = icmp ne i32* %18, null
  %20 = zext i1 %19 to i32
  %21 = call i32 @vcos_assert(i32 %20)
  %22 = load i32*, i32** %9, align 8
  %23 = call i32 @egl_sync_term(i32* %22)
  %24 = load i32*, i32** %9, align 8
  %25 = call i32 @khrn_platform_free(i32* %24)
  ret void
}

declare dso_local i32 @UNUSED(i8*) #1

declare dso_local i32 @vcos_assert(i32) #1

declare dso_local i32 @egl_sync_term(i32*) #1

declare dso_local i32 @khrn_platform_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
